--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,10 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-VERSION_NAME=1.0.0-SNAPSHOT
-GROUP=io.github.hotstu.rxfetch
+VERSION_NAME=1.0.0
+VERSION_CODE=1
 
+GROUP=io.github.hotstu.rxfetch
 POM_DESCRIPTION=an Android http request lib based on RxJava and OkHttp
 POM_URL=https://github.com/hotstu/RxFetch
 POM_SCM_URL=https://github.com/hotstu/RxFetch.git
