--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode Integer.parseInt(VERSION_CODE)
+        versionName "${VERSION_NAME}"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -35,13 +35,13 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     compileOnly "com.google.code.gson:gson:2.8.6"
-    compileOnly "com.squareup.moshi:moshi:1.9.3"
+    compileOnly "com.squareup.moshi:moshi:1.11.0"
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
     testImplementation "com.google.code.gson:gson:2.8.6"
-    testImplementation "com.squareup.moshi:moshi:1.9.3"
+    testImplementation "com.squareup.moshi:moshi:1.11.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
