--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-VERSION_NAME=1.0.0
-VERSION_CODE=1
+VERSION_NAME=1.0.1-SNAPSHOT
+VERSION_CODE=2
 
 GROUP=io.github.hotstu.rxfetch
 POM_DESCRIPTION=an Android http request lib based on RxJava and OkHttp
